--- a/sinatra/Gemfile
+++ b/sinatra/Gemfile
@@ -1,10 +1,8 @@
 source 'https://ruby.taobao.org'
 
 gem 'rake'
-gem 'sinatra'
+gem 'sinatra', require: 'sinatra/base'
 gem 'sinatra-contrib'
-
-# gem 'sinatra-activerecord'
 
 gem 'racksh'
 gem 'thin'
